--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               </button>
             </div>
             <div class="modal-body">
-              <form action="https://formsubmit.co/support@imcoded.com" method="POST">
+              <form action="https://formsubmit.co/139b19434f8b11fd77d0533dbc856e91" method="POST">
                 <div class="form-group">
                   <label for="recipient-name" class="form-control-label">Enter you e-mail to get notified when we launch</label>
                   <input name="email" type="email" class="form-control" id="recipient-name" placeholder="your-name@example.com" required>
