--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <label for="recipient-name" class="form-control-label">Enter you e-mail to get notified when we launch</label>
                   <input name="email" type="email" class="form-control" id="recipient-name" placeholder="your-name@example.com" required>
                   <input type="hidden" name="_next" value="https://imcoded.com/">
-                  <!-- <input type="hidden" name="_captcha" value="false"> -->
+                  <input type="hidden" name="_captcha" value="false">
                   <input type="text" name="_honey" style="display:none">
                   <input type="hidden" name="_autoresponse" value="We have received your email. Thanks for Subscribing!">
                   <input type="hidden" name="_template" value="table">
