--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>      
       <div class="inner cover">
         <h1 class="cover-heading">The adventure Begins</h1>
-        <p class="lead cover-copy">Hold tight as we get our working robots together and bring you the most astonishing educational service ever.</p>
+        <p class="lead cover-copy">Hold tight as we get our working robots together and bring you the most astonishing service ever.</p>
         <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Notify Me</button></p>
       </div>
       <div class="mastfoot">
